src/test/ui/resolve/use_suggestion_placement.stderr
error[E0412]: cannot find type `Path` in this scope
  --> $DIR/use_suggestion_placement.rs:25:16
   |
25 |     type Bar = Path;
   |                ^^^^ not found in this scope
   |
help: possible candidate is found in another module, you can import it into scope
   |
21 |     use std::path::Path;
   |

error[E0425]: cannot find value `A` in this scope
  --> $DIR/use_suggestion_placement.rs:30:13
   |
30 |     let _ = A;
   |             ^ not found in this scope
   |
help: possible candidate is found in another module, you can import it into scope
   |
11 | use m::A;
   |

error[E0412]: cannot find type `HashMap` in this scope
  --> $DIR/use_suggestion_placement.rs:35:23
   |
35 |     type Dict<K, V> = HashMap<K, V>;
   |                       ^^^^^^^ not found in this scope
   |
help: possible candidates are found in other modules, you can import them into scope
   |
11 | use std::collections::HashMap;
   |
11 | use std::collections::hash_map::HashMap;
   |

error[E0091]: type parameter `K` is unused
  --> $DIR/use_suggestion_placement.rs:35:15
   |
35 |     type Dict<K, V> = HashMap<K, V>;
   |               ^ unused type parameter

error[E0091]: type parameter `V` is unused
  --> $DIR/use_suggestion_placement.rs:35:18
   |
35 |     type Dict<K, V> = HashMap<K, V>;
   |                  ^ unused type parameter

error: aborting due to 5 previous errors

